<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_height="60dp"
        android:layout_width="wrap_content"
        android:id="@+id/linearLayout1"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:text="@string/title"
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/description"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="30dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/location"
        android:text="@string/location"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:gravity="center"/>
</LinearLayout>