<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/empty_toolbar"

            ></include>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="60dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_Team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/team_name" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:minLines="3"
                    android:gravity="top|left"
                    android:id="@+id/input_description"
                    android:maxLines="6"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:scrollbars="vertical"
                    android:hint="@string/description" />

            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:drawable/bottom_bar"
                    android:paddingLeft="4.0dip"
                    android:paddingTop="5.0dip"
                    android:paddingRight="4.0dip"
                    android:paddingBottom="1.0dip"
                    android:layout_width="fill_parent" android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:id="@+id/save"
                        android:text="@string/save" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancel"
                        android:layout_weight="1.0"
                        android:text="@string/cancel"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>



    </android.support.design.widget.CoordinatorLayout>

</ScrollView>
